Can't copy and paste URLs that have no title into Mail (macOS) https://bugs.webkit.org/show_bug.cgi?id=185205 <rdar://problem/36352406>

Patch by Aditya Keerthi <akeerthi@apple.com> on 2018-05-02
Reviewed by Tim Horton.

Source/WebCore:

The pasteboardURL generated has an empty title for URLs without titles. Currently, the pasteboardURL.title is being saved to the pasteboard.

To fix the error, we check whether the title is empty and instead save the lastPathComponent to the pasteboard. This matches current behavior as the fallback title.

Augmented WebKitLegacy.ContextMenuCanCopyURL test

* platform/mac/PasteboardMac.mm:
(WebCore::writeURLForTypes):

Tools:

Added test to verify behavior when copying and pasting a URL without a title.

* TestWebKitAPI/Tests/mac/ContextMenuCanCopyURL.html:
* TestWebKitAPI/Tests/mac/ContextMenuCanCopyURL.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/200712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231276 268f45cc-cd09-0410-ab3c-d52691b4dbfc